vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_subtype_paren_array_resolution.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"(resolve) bit_vector\")"
---
ActualPart
  ActualPartSubtypeIndication
    SubtypeIndication
      ParenthesizedElementResolution
        LeftPar
        ElementResolutionResolutionIndication
          ResolutionIndicationElementResolution
            NameResolutionIndication
              Name
                NameDesignatorPrefix
                  Identifier 'resolve'
        RightPar
      Name
        NameDesignatorPrefix
          Identifier 'bit_vector'
