vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_subtype_paren_record_resolution.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"(elem resolve) rec_t\")"
---
ActualPart
  ActualPartSubtypeIndication
    SubtypeIndication
      ParenthesizedElementResolution
        LeftPar
        ElementResolutionResolutionIndication
          RecordResolutionElementResolution
            RecordResolution
              RecordElementResolution
                Identifier 'elem'
                NameResolutionIndication
                  Name
                    NameDesignatorPrefix
                      Identifier 'resolve'
        RightPar
      Name
        NameDesignatorPrefix
          Identifier 'rec_t'
