vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_subtype_resolution_function_name.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"resolve std_logic\")"
---
ActualPart
  ActualPartSubtypeIndication
    SubtypeIndication
      NameResolutionIndication
        Name
          NameDesignatorPrefix
            Identifier 'resolve'
      Name
        NameDesignatorPrefix
          Identifier 'std_logic'
