vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__association_list-2.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::association_list, \"p1 => 1, std_ulogic(p2)=>     sl_sig\")"
---
AssociationList
  AssociationElement
    Formal
      Name
        NameDesignatorPrefix
          Identifier 'p1'
      RightArrow
    ActualPart
      ActualPartExpression
        LiteralExpression
          AbstractLiteral '1'
  Comma
  AssociationElement
    Formal
      Name
        NameDesignatorPrefix
          Identifier 'std_ulogic'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  NameExpression
                    Name
                      NameDesignatorPrefix
                        Identifier 'p2'
          RightPar
      RightArrow
    ActualPart
      ActualPartExpression
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'sl_sig'
