vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__association_list.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::association_list, \"arg1, arg2\",)"
---
AssociationList
  AssociationElement
    ActualPart
      ActualPartExpression
        NameExpression
          Name
            Identifier 'arg1'
  Comma
  AssociationElement
    ActualPart
      ActualPartExpression
        NameExpression
          Name
            Identifier 'arg2'
