vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__empty_port_clause.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
port();

== tree ==
PortClause
  Keyword(Port)
  LeftPar
  RightPar
  SemiColon

== diagnostics ==
1:6 expected InterfaceList
