vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__generic_clause_unclosed_paren.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
generic (width : integer

== tree ==
GenericClause
  Keyword(Generic)
  LeftPar
  InterfaceList
    InterfaceObjectDeclaration
      IdentifierList
        Identifier 'width'
      Colon
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'integer'

== diagnostics ==
1:25 expected ')'
1:25 expected ';'
