vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__interface_list_doubled_separator.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
port (clk : in std_logic;; rst : in std_logic);

== tree ==
PortClause
  Keyword(Port)
  LeftPar
  InterfaceList
    InterfaceObjectDeclaration
      IdentifierList
        Identifier 'clk'
      Colon
      Keyword(In)
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'std_logic'
    SemiColon
    SemiColon
    InterfaceObjectDeclaration
      IdentifierList
        Identifier 'rst'
      Colon
      Keyword(In)
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'std_logic'
  RightPar
  SemiColon

== diagnostics ==
1:26 expected 'signal', 'constant', 'variable', Identifier, 'file', 'type', 'function', 'procedure', 'impure', 'pure' or 'package'
